# EdgeGuard

./: Dockerfile.backend  Dockerfile.engine  README.md  docker-compose.yml  requirements.txt
Screenshots/: desktop.ini
cpp_engine/: CMakeLists.txt  main.cpp
cpp_engine/build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EdgeGuardEngine.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  edge_guard_engine.vcxproj  edge_guard_engine.vcxproj.filters
cpp_engine/build_vs/edge_guard_engine.dir/Release/: edge_guard_engine.exe.recipe
cpp_engine/build_vs/edge_guard_engine.dir/Release/edge_gua.15D63F30.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  edge_guard_engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_engine/build_vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp_engine/build_vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
cpp_engine/build_vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp_engine/build_vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp_engine/models/: anomaly_model.onnx
python_ai/: alert_server.py  alerts_log.csv  dashboard.py  train_and_export.py
